--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
           <li><a href="#contact-me">Contact Me</a></li>
         </ul>
       </nav>
+      <div class="menu-btn">
+        <input type="checkbox" name="" id="">
+        <span class="first-line"></span>
+        <span class="second-line"></span>
+        <span class="third-line"></span>
+      </div>
     </header>
     <main>
       <section id="about-me">
@@ -31,7 +37,7 @@
             <img src="/img/profile.png" alt="profile" />
           </div>
           <div class="about-description">
-            <h1>Hi, I'm <span>Angie!</span></h1>
+            <h1 class="bouncy-text">Hi, I'm <span>Angie!</span></h1>
             <h4>
               I’m an undergraduate Informatics Engineering Student currently
               studying in Bandung Institute of Technology. I have a strong
