feat:tech-stack

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <ul>
           <li><a href="#about-me">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#tech-stack">Tech Stacks</a></li>
           <li><a href="#experiences">Experience</a></li>
           <li><a href="#achievements">Achievements</a></li>
           <li><a href="#contact-me">Contact Me</a></li>
         </ul>
       </nav>
       <div class="menu-btn">
-        <input type="checkbox" name="" id="">
+        <input type="checkbox" name="" id="" />
         <span class="first-line"></span>
         <span class="second-line"></span>
         <span class="third-line"></span>
@@ -50,14 +51,14 @@
             </a>
           </div>
         </div>
-      </section>
-      <section class="interest">
-        <ul>
-          <li class="interest-item">UX Design</li>
-          <li class="interest-item">UI Design</li>
-          <li class="interest-item">Graphic Design</li>
-          <li class="interest-item">Front-End Development</li>
-        </ul>
+        <div class="interest">
+          <ul>
+            <li class="interest-item">UX Design</li>
+            <li class="interest-item">UI Design</li>
+            <li class="interest-item">Graphic Design</li>
+            <li class="interest-item">Front-End Development</li>
+          </ul>
+        </div>
       </section>
       <section id="projects">
         <div class="project-main-container">
@@ -136,11 +137,41 @@
           </a>
         </div>
       </section>
+      <section id="tech-stack">
+        <div class="project-main-container">
+          <div class="title-container">
+            <h5>what i've used</h5>
+            <h2 class="section-title">Tech Stack</h2>
+          </div>
+          <div class="card-container">
+            <div class="tech-card">
+              <img src="/img/c.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/cpp.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/figma.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/python.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/react.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/tailwind.webp" alt="c" class="card-image" />
+            </div>
+            <div class="tech-card">
+              <img src="/img/sql.webp" alt="c" class="card-image" />
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="experiences">
         <div class="wrapper">
           <h2 class="section-title">Experiences</h2>
           <div class="card-container">
-            <!-- experience cards-->
             <div class="experience-card bg-purple">
               <div class="card-title-container">
                 <h5>Deputy Head of OSKM UI/UX Division</h5>
@@ -182,7 +213,6 @@
         <div class="wrapper">
           <h2 class="section-title">Achievements</h2>
           <div class="card-container">
-            <!-- achievement cards-->
             <div class="achievement-card">
               <h5>Djarum Foundation Scholarship Awardee</h5>
               <p>September 2024</p>
