feat : icon tab

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link href="styles.css" rel="stylesheet" />
+    <link rel="icon" href="/img/duck-icon.webp">
   </head>
   <body>
     <header>
